--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=ahms
 
-spring.security.user.name=user
-spring.security.user.password=password
+#spring.security.user.name=user
+#spring.security.user.password=password
 
 # PostgreSQL database connection configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_management
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=hotel_management
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -22,4 +22,15 @@ spring.datasource.hikari.pool-name=MyHikariCP
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#aws email communications
+spring.mail.host=email-smtp.ap-south-1.amazonaws.com
+spring.mail.port=587
+spring.mail.username=AKIASVLKCR5LYK2RN27H
+spring.mail.password=BEWVfxIJCngf5GZqYYLftQJF8tkYRWnebGbEOFpsgGuj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
