--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,13 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+#Actuator configurations
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
+
+# Directory for logs
+logging.file.path=/logs  # Specify your directory path here
+# Log filename (optional)
+logging.file.name=ahms.log
